--- a/index.html
+++ b/index.html
@@ -192,7 +192,9 @@
          <!------------------------------ #Contacte ------------------------------------>
         <section class="Contacte">
             <div class="s_contact">
-                <div class="map"></div>
+                <div class="map">
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d15958.895317001685!2d9.470522708531343!3d0.3943277701780831!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1sbelle%20vue%202!5e0!3m2!1sfr!2sga!4v1605702470563!5m2!1sfr!2sga" width="100%" height="100%" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+                </div>
                 <div class="form">
                     <form action="" method="post">
                             <div class="nom">
